# sve-cache-simulator

./: .clang-format  .gitignore  .gitlab-ci.yml  BundleStatsMain.cc  CacheConfig.cc  CacheConfig.hh  CacheHierarchy.cc  CacheHierarchy.hh  Clock.cc  Clock.hh  DirectMappedCache.cc  DirectMappedCache.hh  InfiniteCache.cc  InfiniteCache.hh  LICENSE.txt  Makefile  MemoryTrace.cc  MemoryTrace.hh  README.md  SetAssociativeCache.cc  SetAssociativeCache.hh  TraceConverter.cc  TraceConverter.hh  TraceConverterMain.cc  cache.cc  cache.hh  main.cc  meson.build  meson_options.txt
configs/: 32KB.ini  A64FX.ini  TX2+A64FX.batch  TX2.ini  assoc-32KB.ini  assoc-4+32KB.ini  direct-32KB.ini
test/: .gitignore  CacheConfigTest.cc  CacheHierarchyTest.cc  CacheTest.cc  DirectMappedCacheTest.cc  InfiniteCacheTest.cc  Makefile  MemoryTraceTest.cc  RandomAddressGenerator.cc  RandomAddressGenerator.hh  SetAssociativeCacheTest.cc  TraceConverterTest.cc  utils.cc  utils.hh
test/traces/: 7.trace  8.trace  bundle.trace
